# vem-desktop

./: CONTRIBUTING.md  Justfile  README.md  SECURITY.md  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
packaging/aur/: PKGBUILD.template
presets/: catppuccin-mocha.vemrc.json  hybrid-numbers.vemrc.json  vim-classic.vemrc.json
src/: main.ts  presets.test.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
