[package]
name = "vem-desktop"
version = "0.1.18"
description = "Vem's Tauri desktop shell"
authors = ["vemjs"]
license = "MIT"
repository = "https://github.com/vemjs/vem-desktop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Named explicitly so `cargo build --release` (and `tauri build`) produce a
# binary literally called `vem`, not `vem-desktop` (Cargo's default when no
# [[bin]] is declared is the package name) — the whole point is `vem` works
# bare from a terminal.
[[bin]]
name = "vem"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only: query the *runtime* (installed, not build-time) WebKitGTK
# version so main.rs can gate the DMABUF-disable NVIDIA workaround to only
# the WebKitGTK versions that actually need it — already an indirect
# dependency via wry, pinned to the same resolved version here.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk-sys = "2.0.2"

[dev-dependencies]
tempfile = "3.27.0"
